# fictional-barnacle

./: .dockerignore  .env.ci  .env.example  .env.staging  .env.template  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FALLBACK_STRATEGY.md  Makefile  NEXT_STEPS.md  README.md  SECURITY.md  TEAM_ONBOARDING.md  alembic.ini  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  opencode.json  pyproject.toml
.barnacle/evidence/: README.md  local-automation-phase6.json
.barnacle/work/: README.md  schema.json
.claude/: ralph-loop.local.md  settings.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: chore_request.yml  feature_request.yml
.github/agents/: gem-devops.agent.md  one-shot-feature-issue-planner.agent.md
.github/instructions/: mcp-tools.instructions.md
.github/workflows/: ci.yml  eval.yml  release.yml  stale-pr-notify.yml
.observability/: traces.jsonl
.opencode/: AGENTS.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
config/: llm_pricing.yml
data/: eval_baseline.json  genesis_v2_smoke_results.json
data/eval_output/: batch_9bbb40df-ebbb-459b-86f5-fee5fc29e9c0.json
data/eval_smoke_output/: batch_6df21cb9-4adb-4997-8f6e-bcae3eb95a59.json  batch_6df21cb9-4adb-4997-8f6e-bcae3eb95a59_summary.csv  batch_7566b114-bdd8-4fac-8fbe-c434541b743c.json  batch_94afd451-27ba-44de-8280-d7336b805490.json  smoke_result.json  smoke_test_result.json
data/personas/: curious-explorer.yaml  disengaged-skeptic.yaml  impulsive-actor.yaml  terse-minimalist.yaml  verbose-narrator.yaml
data/seeds/: bus-stop-shimmer.yaml  cafe-with-strange-symbols.yaml  dirty-frodo.yaml  library-forbidden-book.yaml
docs/: deployment-runbook.md  privacy-config.md  privacy-policy.md  prompt-variables.md  release.md
docs/adr/: README.md
docs/backlog/: 2026-05-03-discovery.md  README.md  queue.yaml
docs/ops/: kanban-langfuse-operating-contract.md  langfuse-canary-checklist.md  langfuse-improvement-roadmap.md  orchestrator-handoff-template.md  profile-setup-notes.md  prompt-change-pr-template.md  restore-drill-log.md  sql-restore.md
docs/plans/: 2026-05-11-gap-closure-plan.md  2026-05-20-branch-cleanup-audit.md
docs/vision/: TTA-CRITICAL-REVIEW.md  TTA-STRATEGY.md  TTA-THREADS.md  TTA-UNIFIED-VISION.md
migrations/neo4j/: 001_initial_schema.cypher  002_full_schema.cypher  002_relationship_types.cypher  003_npc_character_system.cypher  004_universe_extension.cypher
migrations/postgres/: env.py
monitoring/prometheus/: alerts.yml  prometheus.yml
plans/: PLAN_INDEX.json  PLAN_INDEX.md  TECHNICAL_REVIEW.md  api-and-sessions.md  generation-serving-profiles.md  implementation-plan.md  index.json  index.md  index_plans.py  llm-and-pipeline.md  ops.md  prompts.md  resilience-and-safety.md  s66-ac6604-provider-preference.md  s66-provider-utilization-spike.md  serving-profiles-phase3.md  system.md  v2-universe-and-simulation.md  v2_1-architecture-review.md  v2_1-evaluation-and-playtesting.md  world-and-genesis.md
prompts/fragments/: safety-preamble.fragment.md
scripts/: audit_coherence.py  changed_tests.py  changelog_check.py  check_services.py  completion_check.py  dev_workflow.py  genesis_v2_smoke.py  llm_player.py  load_test.py  load_test.sh  merge-guard.sh  migrate_validate_v2.py  playtest.py  pr_prep.py  practical_gate.py  queue_readiness_gate.py  run_dev.sh  run_prod.sh  run_sims.py  run_tta_experiment.py  setup_db.py  sim_runner.py  smoke_s64_generation_profile.py  smoke_test.py  spec_lifecycle.py  tdd_guard.py  version_check.py  workflow_state.py
spec/: design-spec-completeness-visualization.md  tool-ac-traceability.md
specs/: 00-project-charter.md  01-gameplay-loop.md  02-genesis-onboarding.md  03-narrative-engine.md  04-world-model.md  05-choice-and-consequence.md  06-character-system.md  07-llm-integration.md  08-turn-processing-pipeline.md  09-prompt-and-content.md  10-api-and-streaming.md  11-player-identity-and-sessions.md  12-persistence-strategy.md  13-world-graph-schema.md  14-deployment.md  15-langfuse-integration.md  15-observability.md  16-testing-infrastructure.md  17-data-privacy.md  23-error-handling-and-resilience.md  24-content-moderation-v1.md  25-rate-limiting-and-anti-abuse.md  26-admin-and-operator-tooling.md  27-save-load-and-game-management.md  28-performance-and-scalability.md  28-performance-and-scaling.md  29-universe-as-first-class-entity.md  30-session-universe-binding.md  31-actor-identity-portability.md  32-transport-abstraction.md  33-universe-persistence-schema.md  34-diegetic-time.md  35-npc-autonomy-between-turns.md  36-consequence-propagation.md  37-world-memory-model.md  38-npc-memory-and-social-model.md  39-universe-composition-model.md  40-genesis-v2-real-to-strange.md  41-scenario-seed-library.md  42-llm-playtester-agent-harness.md  (+38 more)
specs/draft/: gate-local-ci.md  queue-readiness-gate.md
specs/future/: 18-therapeutic-framework.md  19-crisis-and-content-safety.md  20-story-sharing.md  21-collaborative-writing.md  22-community.md
spikes/: 006-arq-worker-migration.md  008-htmx-ui.md
spikes/005-structured-output/: 005a_litellm_native.py  005b_instructor.py  005c_pydantic_ai.py  005c_runner.py  README.md  run_all.py  shared.py
src/shared_langfuse/: __init__.py  client.pyi
src/tta/: __init__.py  __main__.py  config.py  errors.py  logging.py  observability.py
static/: playtest.html
tests/: __init__.py  conftest.py
tests/bdd/: conftest.py
tests/integration/: conftest.py  test_s12_persistence_integration.py  test_s13_neo4j_integration.py  test_s28_horizontal_scaling.py  test_s28_performance.py  test_turn_cycle.py
tests/simulation/: __init__.py  batch_smoke.py  conftest.py  run_smart_router.py  smoke_eval_pipeline.py  test_gameplay_simulation.py  test_smart_router.py
tests/unit/: conftest.py  test_alembic.py  test_config.py  test_context_and_cost.py  test_hypothesis.py  test_logging.py  test_migration_011.py  test_migration_014.py  test_observability.py  test_wave18.py  (+3 more)
(+431 files in other folders)
