[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tta"
version = "0.1.0"
description = "Therapeutic Text Adventure — AI-powered narrative game"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "litellm>=1.83,<2",
    "neo4j>=5.0",
    "redis>=5.0",
    "structlog>=24.0",
    "langfuse>=4.0,<5.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "tenacity>=9.0",
    "httpx>=0.27",
    "prometheus-client>=0.24.1",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-bdd>=7.0",
    "hypothesis>=6.0",
    "pytest-testmon>=2.0",
    "pytest-watcher>=0.4",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tta"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["B008"]  # Depends() in defaults is idiomatic FastAPI

# ---------------------------------------------------------------------------
# Pyright — type checking
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
venvPath = "."
venv = ".venv"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external services)",
    "integration: Integration tests (require Docker services)",
    "e2e: End-to-end tests",
    "slow: Slow tests (>5s)",
    "neo4j: Requires Neo4j",
    "redis: Requires Redis",
    "postgres: Requires PostgreSQL",
    "golden: Golden file comparison tests",
    "flaky: Known flaky tests",
    "llm_live: Tests that call real LLM APIs",
    "hypothesis: Property-based tests",
    "bdd: BDD acceptance tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["tta"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0
