[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tta"
version = "0.1.0"
description = "Therapeutic Text Adventure — AI-powered narrative game"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "litellm>=1.83,<2",
    "neo4j>=6.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "structlog>=24.0",
    "langfuse>=4.0,<5.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "tenacity>=9.0",
    "httpx>=0.27",
    "prometheus-client>=0.24.1",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "python-ulid>=3.0",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "arq>=0.25",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-bdd>=7.0",
    "pytest-timeout>=2.1",
    "hypothesis>=6.0",
    "pytest-testmon>=2.0",
    "pytest-watcher>=0.4",
    "ruff>=0.8",
    "pyright>=1.1",
    "locust>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tta"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["B008"]  # Depends() in defaults is idiomatic FastAPI

[tool.ruff.lint.per-file-ignores]
"specs/index_specs.py" = ["E501"]  # embedded CSS/HTML strings exceed 88 chars
"specs/trace_acs.py" = ["E501"]  # embedded HTML template and argparse strings exceed 88 chars

# ---------------------------------------------------------------------------
# Pyright — type checking
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
venvPath = "."
venv = ".venv"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external services)",
    "integration: Integration tests (require Docker services)",
    "e2e: End-to-end tests",
    "slow: Slow tests (>5s)",
    "neo4j: Requires Neo4j",
    "redis: Requires Redis",
    "postgres: Requires PostgreSQL",
    "golden: Golden file comparison tests",
    "flaky: Known flaky tests",
    "llm_live: Tests that call real LLM APIs",
    "hypothesis: Property-based tests",
    "bdd: BDD acceptance tests",
    "spec: Links test to one or more spec AC IDs (format: AC-NN.NN)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["tta"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "raise NotImplementedError",
]
